<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:scaleType="centerCrop"
    tools:context=".registration.Registration"
    android:orientation="vertical"
    android:layout_gravity="center"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title_main_pages"
        android:text="@string/registration_registration"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/username"
        style="@style/field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_username"
        android:inputType="textEmailAddress"
        android:textStyle="italic"
        android:autofillHints="" />


    <EditText
        android:id="@+id/password"
        style="@style/field_sub_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_password"
        android:inputType="textPassword"
        android:textStyle="italic"
        android:autofillHints="" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >


        <Button
            android:id="@+id/sing_in"
            style="@style/button_main_pages2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_sign_in"
            android:layout_marginEnd="9dp"
            />

        <Button
            android:id="@+id/guest"
            style="@style/button_main_pages2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_guest"
            />
    </LinearLayout>


    <Button
        android:id="@+id/forgot_password"
        style="@style/button_main_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_forgot_password"
        />



    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_sign_up"
        style="@style/sub_title"
        />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="@color/font_main_color"
        android:layout_marginTop="8dp"
        />



</LinearLayout>