<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_activity"
    android:scaleType="centerCrop"
    tools:context=".registration.SignUp"
    android:layout_gravity="center"
    android:orientation="vertical"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/tool_bar_transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/arrow_next"
            android:layout_width="25dp"
            android:layout_height="25dp"
            tools:ignore="MissingConstraints"
            style="@style/appBar_arrow_next"
            />

        <TextView
            android:id="@+id/textView"
            style="@style/appBar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/arrow_back_sign_up"
            android:layout_width="25dp"
            android:layout_height="25dp"
            tools:ignore="MissingConstraints"
            style="@style/appBar_arrow_back"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <EditText
        android:id="@+id/first_name"
        style="@style/field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_first_name"
        />

    <EditText
        android:id="@+id/last_name"
        style="@style/field_sub_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_last_name"
        />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/date_of_birth"
            style="@style/field_sub_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_birthdate"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/date_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/field_sub_field"
            android:paddingTop="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/email"
        style="@style/field_sub_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password"
        style="@style/field_sub_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_password"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/gender_id"
        style="@style/field_sub_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Choose your gender"
        />


    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:drawableRight="@drawable/ic_female_"
            android:text="Female"
            android:textSize="0sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:drawableRight="@drawable/ic_male_"
            android:text="Male"
            android:textSize="0sp"
            />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/font_main_color"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        />


</LinearLayout>