<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_activity"
    android:orientation="vertical"
    tools:context=".account.AccountViewPager1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="25dp"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="50dp"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="500dp"
                    android:layout_margin="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="500dp"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        >
                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            tools:layout_editor_absoluteX="64dp"
                            tools:layout_editor_absoluteY="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>



            <EditText
                android:id="@+id/first_name"
                style="@style/field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_first_name"
                />

            <EditText
                android:id="@+id/last_name"
                style="@style/field_sub_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_last_name"
                />

            <EditText
                android:id="@+id/date_of_birth"
                style="@style/field_sub_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_birthdate"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/email"
                style="@style/field_sub_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_email"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/password"
                style="@style/field_sub_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*****************"
                android:inputType="textPassword"
                />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
